--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Quarto and Project Config
+_quarto.yml
+./.quarto
+
+inventory-analysis-case-study/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
